# SwissUnihockeyStats

./: .coverage  .dockerignore  .env.docker.example  .env.example  .gitignore  ANALYSIS_AND_NEXT_STEPS.md  APILayers.txt  API_USAGE_EXAMPLES.py  CLAUDE.md  DATABASE_IMPLEMENTATION.md  DEPLOYMENT.md  Dockerfile  FEATURE_TESTING.md  IMPLEMENTATION_ANALYSIS.md  INDEXING_STRATEGY.md  INSTALLATION.md  LICENSE  MANIFEST.in  MODERN_IMPLEMENTATION.md  Makefile  PERFORMANCE_COMPARISON.md  PYTHON_FULL_STACK.md  QUICK_START.md  README.md  SESSION_SUMMARY.md  check_db.py  check_games.py  check_github_ready.py  check_leagues.py  check_schema.py  check_season_games.py  check_teams_detail.py  config.ini  create_doc_index.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  docker-quickstart.ps1  docker-quickstart.sh  (+9 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-tests.yml  docker.yml  tests.yml
api/: __init__.py  cache.py  client.py  endpoints.py
backend/: .env.example  .gitignore  README.md  check_players.py  manage.py  rendering_config.json  requirements-dev.txt  requirements.txt  test_cache_reload.py  test_club_detail.py
backend/app/: config.py  database.py  main.py
backend/app/api/: __init__.py
backend/app/lib/: i18n.py  (+1 more)
backend/static/: manifest.json  sw.js
backend/templates/: admin.html  admin_login.html  admin_sync_failures.html  admin_unresolved_events.html  base.html  club_detail.html  clubs.html  coach_detail.html  contact.html  error_404.html  error_500.html  favorites.html  game_detail.html  games.html  home.html  league_detail.html  leagues.html  player_detail.html  players.html  privacy.html  rankings.html  referee_detail.html  schedule.html  team_detail.html  teams.html
backend/tests/: conftest.py  test_admin_auth.py  test_admin_indexing.py  test_admin_stats_history.py  test_admin_trends_migration.py  test_api_client.py  test_api_endpoints.py  test_cache.py  test_cooldown_persistence.py  test_data_indexer_comprehensive.py  test_data_indexer_utils.py  test_game_completeness.py  test_game_lifecycle_indexer.py  test_game_lifecycle_model.py  test_game_lifecycle_scheduler.py  test_game_timeline.py  test_index_games_lock.py  test_local_stats_aggregator.py  test_local_stats_integration.py  test_player_detail_enrichment.py  test_player_game_stats.py  test_player_stats_phase2.py  test_player_stats_skip_logic.py  test_repair_cli.py  test_repair_overlap_detection.py  test_repair_service.py  test_routes.py  test_scheduler.py  test_scheduler_game_lineups_policy.py  test_scheduler_league_groups_removed.py  test_season_freeze.py  test_stats_service.py  test_ttl_cache.py
data/: rendering_config.json  scheduler_config.example.json
data/cache/: .gitkeep
docs/: APILayers.txt  CACHING_IMPLEMENTATION.md  CACHING_STRATEGY.md  CHANGELOG.md  COMPONENT_LIBRARY.md  CONTRIBUTING.md  DOCKER.md  DOCKER_ARCHITECTURE.md  DOCKER_COMPLETE.md  DOCKER_SETUP.md  DOCUMENTATION_INDEX.md  FEATURE_IDEAS.md  GETTING_STARTED.md  GITHUB_SETUP.md  MODERN_WEB_APP_ROADMAP.md  PHASE_2_IMPLEMENTATION_SUMMARY.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  PUBLISHING_CHECKLIST.md  QUICK_START.md  README.md  SECURITY.md  SPRINT_PLAN.md  TECH_STACK.md  TESTING_GUIDE.md
docs/plans/: 2026-03-08-db-repair-service-design.md  2026-03-08-db-repair-service.md  2026-03-08-game-timeline-design.md  2026-03-08-game-timeline.md  2026-03-09-admin-overhaul-design.md  2026-03-09-admin-overhaul.md
scripts/: analyze_scheduler_errors.py  backfill_old_scheduled_games.py  backfill_team_logos.py  db_query.py  example_fetch_data.py  healthcheck.py  preload_cache.py  test_caching.py
tests/: conftest.py  test_api_endpoints.py  test_cache.py  test_client.py  test_error_pages.py  test_i18n.py  test_routes.py  test_skeletons_and_api_simplified.py  test_week4.py
web/: .env.example  README.md  tailwind.config.js
web.deprecated/: README_DEPRECATION.md  next.config.js  package.json  tsconfig.json
(+103 files in other folders)
